# pydpac

./: Baxter2011.ipynb  Bishop_et_al_2017.ipynb  Bishop_et_al_2017_nonlinear.ipynb  Demo.ipynb  License.txt  README.md  README.txt  baxter11.py  baxter11_en.py  chaos_demo.ipynb  chaos_nest_demo.ipynb  check_baxter.py  comp_baxter11.py  demo_var.py  dfs_ens.py  eigen_value_decomposition_linear.ipynb  eigen_value_decomposition_linear.py  ensemblePf.ipynb  ensvsa.py  exp_func.py  hs00.py  hs00_func.py  inflation_function.qmd  l05.py  l05_func.py  l05j.py  l05j_fcst.py  l05j_func.py  l05m.py  l05m_func.py  l05nest.py  l05nest_fcst.py  l05nest_func.py  l96.py  l96_fcst.py  l96_func.py  logging_config.ini  main.py  minimize_test.py  modulated_ensemble_linear.ipynb  (+36 more)
analysis/: Makefile  README  README.md  cgf.pyf  cgfam.f  cgsearch.f  chi_test.py  corrfunc.py  costJ.py  enkf.py  enkf4d.py  enks.py  envar.py  envar_nest.py  file_utility.f90  file_utility.pyf  infl_adap.py  infladap.py  inflfunc.py  kf.py  lbfgs.f  lbfgs.pyf  lmlef.py  lmlef4d.py  logging_config.ini  logging_test.py  logging_test2.py  minimize.py  mlef.py  mlef4d.py  mlef_nest.py  mlef_rloc.py  mlefw.py  mles.py  mles_rloc.py  obs.py  trunc1d.py  var.py  var4d.py  var_nest.py
data/: data.csv
etlm/: american-meteorological-society.csl  ametsocV6.bst  prop_etlm.qmd  prop_etlm_l96.py  prop_letlm_adj_l96.py  (+6 more)
model/lorenz05/: CMakeLists.txt  lorenz2_test.f90  lorenz2m_test.f90  lorenz3_test.f90  lorenz3m_test.f90
model/lorenz05/src/: CMakeLists.txt  kind_module.f90  lorenz2_module.f90  lorenz3_module.f90
(+194 files in other folders)
